<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!--edit by caoyu********************-->
    <string name="app_name">手机内测游戏助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Login_head">登陆360账号</string>
    <string name="Login_usr_name">请输入你的用户名</string>
    <string name="Login_password">请输入密码</string>
    <string name="Login">登陆</string>
    <string name="Login_forget_password">忘记密码</string>
    <string name="Login_up">立即注册</string>
    <string name="Login_in_success">您已经登陆成功</string>
    <string name="Login_in_fail">登录失败</string>

    <!--**************************************-->


    <string name="current_test">今日内测</string>

    <string name="coming_test">即将内测</string>

    <string name="reserve_area">保留区域</string>

    <string name="drop_dowm">下拉刷新</string>

    <string name="release_update">松开刷新</string>

    <string name="loading">正在加载。。。</string>
    <string name="seen_more">更多</string>
    <string name="start_download">开始下载</string>
    <string name="open_download">2015-08-01开发内测</string>

    <string name="view_details">查看详情</string>

    <string name="time_reminder">定时提醒</string>

    <string name="brief_intro">简介</string>

    <string name="download_num">次下载</string>
    <string name="game_name">乱斗西游</string>
    <string name="game_mark">游戏评分</string>
    <string name="game_space"> </string>
    <string name="game_download_times">8843 次下载 | 22.0M </string>
    <string name="game_introduct">简介</string>
    <string name="game_comment">评论</string>
    <string name="game_bbs">专区</string>
    <string name="game_gift">活动礼包</string>


    <!--ma xiao wei test********************-->
    <string name="expend">展开</string>
    <string name="unexpend">收起</string>

    <string name="gift_name_tv">《乱斗西游》礼包</string>

    <string name="gift_already_times">已被领取1234次</string>
    <string name="gift_info">礼包详情:可获得清醒药酒20瓶</string>
    <string name="gift_end_time">2015-12-01 截止</string>
    <!--**************************************-->

    <!--注册界面错误提示字符串********************-->
    <string name="user_name_has_existed">用户名已存在</string>
    <string name="password_not_same">密码输入不一致</string>
    <string name="signup_success">注册成功</string>
    <string name="login_title">用户登录</string>
    <string name="signup_title">用户注册</string>
    <!--**************************************-->

    <!--Ng 7.27 个人主页-->
    <string name="ng_person_title">我的主页</string>
    <string name="ng_person_gift">我的礼包</string>
    <string name="ng_person_name">撸啊撸撸啊撸</string>
    <string name="ng_person_collection">我的收藏</string>
    <string name="ng_person_install_his">安装历史</string>
    <string name="ng_person_expect_more">期待更多</string>


    <string name="ng_share_more">分享成功！</string>
    <string name="luandouxiyou">是最具人气的MOBA手游，最酣畅的MOBA对战震撼来袭。</string>
    <!--LoginInterface字符串********************-->
    <string name="login_interface_error_string_nomal">正常</string>
    <string name="login_interface_error_string_invalidUserName">非法用户名</string>
    <string name="login_interface_error_string_invalidPassword">非法密码</string>
    <string name="login_interface_error_string_userNameHasExisted">用户名已存在</string>
    <string name="login_interface_error_string_userNameNotExist">用户名不存在</string>
    <string name="login_interface_error_string_invalidNickName">非法昵称</string>
    <string name="login_interface_error_string_nickNameHasExisted">昵称已存在</string>
    <!--**************************************-->
</resources>
