<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:background="@drawable/contact_listitem"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_gift"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gift_icon"
        android:scaleType="fitXY"
        android:visibility="visible" />


    <TextView


        android:id="@+id/tv_gift_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/iv_gift"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/gift_name_tv"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_bag_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_gift_end_time"
        android:layout_alignRight="@+id/tv_gift_end_time"
        android:layout_below="@+id/tv_gift_name"
        android:layout_marginLeft="2dp"
        android:singleLine="true"
        android:text="@string/gift_already_times"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/tv_gift_end_time"
        android:layout_alignLeft="@+id/tv_bag_times"

        android:layout_alignStart="@+id/tv_bag_times"
        android:singleLine="true"
        android:text="@string/gift_info"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_gift_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/iv_gift"
        android:layout_alignLeft="@+id/tv_gift_name"
        android:layout_alignStart="@+id/tv_gift_name"
        android:singleLine="true"
        android:text="@string/gift_end_time"
        android:textSize="12sp" />


    <Button
        android:id="@+id/btn_gift_receive"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/tv_info"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/tv_gift_name"
        android:layout_toRightOf="@+id/tv_gift_name"
        android:background="@drawable/simple_introduce_button_selector"
        android:focusable="false"
        android:gravity="center"
        android:text="领取"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</RelativeLayout>