<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#2c93fc">


        <ImageButton
            android:id="@+id/btn_game_info_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_back_normal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_game_info_back"
            android:layout_toRightOf="@+id/btn_game_info_back"
            android:text="详情"
            android:textColor="@color/white"
            android:textSize="23sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/background">


        <ImageView
            android:id="@+id/iv_game"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/ico_game1" />


        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/iv_game"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/iv_game"
            android:layout_toRightOf="@+id/iv_game"
            android:text="@string/game_name"
            android:textColor="@android:color/white"
            android:textSize="23sp" />


        <ImageView
            android:id="@+id/tv_game_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_game_name"
            android:layout_alignStart="@+id/tv_game_name"
            android:layout_below="@+id/tv_game_name"
            android:layout_marginTop="5dp"
            android:background="@drawable/star" />

        <TextView
            android:id="@+id/tv_game_download_nums"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/tv_game_mark"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/tv_game_mark"
            android:layout_below="@+id/tv_game_mark"
            android:layout_marginTop="5dp"
            android:text="@string/game_download_times"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_intro_game"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/game_introduct"
            android:textColor="@color/tab_txt_low"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/tv_comment_game"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/tv_intro_game"
            android:layout_toRightOf="@+id/tv_intro_game"
            android:gravity="center"
            android:text="@string/game_comment"
            android:textColor="@color/tab_txt_low"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_bbs_game"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/tv_comment_game"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/tv_comment_game"
            android:layout_toRightOf="@+id/tv_comment_game"
            android:gravity="center"
            android:text="@string/game_bbs"
            android:textColor="@color/tab_txt_low"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_gift_game"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/tv_bbs_game"
            android:layout_toRightOf="@+id/tv_bbs_game"
            android:gravity="center"
            android:text="@string/game_gift"
            android:textColor="@color/tab_txt_low"
            android:textSize="22sp" />


    </RelativeLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />


</LinearLayout>